--- a/css/layout.css
+++ b/css/layout.css
@@ -10,4 +10,15 @@ header::after{
 } header h3{
     float: left;
     margin-left: 15px;
+    margin-right: 100px;
+} header nav{
+    float: left;
+    margin-top: 10px;
+} header nav li{
+    float: left;
+    margin: 10px;
+} #mobile-nav-hr{
+    display: none;
+} header{
+    margin-bottom: 100px;
 }
